# mac

./: CMakeLists.txt  macos_ui_plugin.cpp
.github/workflows/: build.yml
